# MathEvidence

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  KNOWN_TRUST_GAPS.md  README.md  ROADMAP.md  SECURITY.md  SPEC_INDEX.md  SUPPORT.md  justfile  lakefile.toml  pyproject.toml  requirements-dev.txt  requirements-freeze.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
MathEvidence/: Assurance.lean  Checkers.lean  Conjecture.lean  Core.lean  Encoding.lean  Hypothesis.lean  IR.lean  Registry.lean  Tactic.lean  Testing.lean  TraceToPlan.lean
adapters/: README.md  __init__.py
agent/: CHANGELOG.md  README.md  __init__.py  test_agent_api.py  test_finite_graph.py  test_hypothesis.py  test_trace_to_plan.py
benchmarks/: README.md
docs/: DELIVERY_ROADMAP.md  PROJECT_SPEC.md  README.md  RELEASE_NOTES_DRAFT.md  REPOSITORY_ARCHITECTURE.md  ROADMAP.md  SECURITY_AND_TRUST_MODEL.md  SPEC_INDEX.md  STATUS.md  TESTING_AND_CI.md
evidence/: README.md
foundry/: README.md  __init__.py  capture.py  test_pipelines.py  test_trained_selector.py
registry/: README.md  catalog.json  support-matrix.json
schemas/: algorithm-contract.schema.json  analytic-calculus-certificate.schema.json  analytic-calculus-request.schema.json  backend.schema.json  calculus-expr.schema.json  capability.schema.json  checker-receipt.schema.json  condition-lattice.schema.json  evidence-bundle.schema.json  federation-agreement.schema.json  federation-certificate.schema.json  federation-metadata.schema.json  federation-opaque-ir.schema.json  (+16 more)
(+2010 files in other folders)
